# giflib

./: .gitignore  CMakeLists.txt  Makefile  README.md  getversion
examples/: giftool.c  ya_getopt.c
include/: gif_lib.h
src/: gif_font.c
